--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -8,5 +8,18 @@
 	<!-- Since, Index page is not an expression, we will have to
 	surround it with single quotes -->
 	<h2 th:text="'List of owners'">List of owners...</h2>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>First Name</th>
+			<th>Last Name</th>
+		</tr>
+		<tr th:each="owner : ${owners}">
+			<td th:text="${owner.id}"></td>
+			<td th:text="${owner.firstName}"></td>
+			<td th:text="${owner.lastName}"></td>
+		</tr>
+	</table>
+	
 </body>
 </html>
