--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -8,5 +8,17 @@
 	<!-- Since, Index page is not an expression, we will have to
 	surround it with single quotes -->
 	<h2 th:text="'List of vets'">List of vets...</h2>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>First Name</th>
+			<th>Last name</th>
+		</tr>
+		<tr th:each="vet : ${vets}">
+			<td th:text="${vet.id}"></td>
+			<td th:text="${vet.firstName}"></td>
+			<td th:text="${vet.lastName}"></td>
+		</tr>
+	</table>
 </body>
 </html>
