--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
 <meta charset="UTF-8">
 <title>Spring Pet Clinic</title>
@@ -7,6 +8,12 @@
 <body>
 	<!-- Since, Index page is not an expression, we will have to
 	surround it with single quotes -->
-	<h2 th:text="'Index page'">Index page</h2>
+	<h2 th:text="#{welcome}">Welcome</h2>
+	<div class="row">
+		<div class="col-md-12">
+			<img class="img-responsive" src="../static/resources/images/pets.png"
+				th:src="@{/resources/images/pets.png}" />
+		</div>
+	</div>
 </body>
 </html>
