--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
 <meta charset="UTF-8">
 <title>Spring Pet Clinic</title>
 </head>
 <body>
-	<!-- Since, Index page is not an expression, we will have to
-	surround it with single quotes -->
-	<h2 th:text="'List of vets'">List of vets...</h2>
-	<table>
-		<tr>
-			<th>ID</th>
-			<th>First Name</th>
-			<th>Last name</th>
-		</tr>
-		<tr th:each="vet : ${vets}">
-			<td th:text="${vet.id}"></td>
-			<td th:text="${vet.firstName}"></td>
-			<td th:text="${vet.lastName}"></td>
-		</tr>
+
+	<h2>Veterinarians</h2>
+
+	<table id="vets" class="table table-striped">
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>First Name</th>
+				<th>Last name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="vet : ${vets}">
+				<td th:text="${vet.id}"></td>
+				<td th:text="${vet.firstName}"></td>
+				<td th:text="${vet.lastName}"></td>
+			</tr>
+		</tbody>
 	</table>
 </body>
 </html>
