--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -9,21 +9,21 @@
 
 	<h2>Veterinarians</h2>
 
-	<table id="vets" class="table table-striped">
-		<thead>
-			<tr>
-				<th>ID</th>
-				<th>First Name</th>
-				<th>Last name</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="vet : ${vets}">
-				<td th:text="${vet.id}"></td>
-				<td th:text="${vet.firstName}"></td>
-				<td th:text="${vet.lastName}"></td>
-			</tr>
-		</tbody>
-	</table>
+  <table id="vets" class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Specialties</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr th:each="vet : ${vets}">
+        <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+        <td><span th:each="specialty : ${vet.specialities}"
+          th:text="${specialty.description + ' '}" /> <span
+          th:if="${vet?.specialities.size() == 0}">none</span></td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
